--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containerV {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+  /* default is row */
+}
+
+.boxV {
+  width: 90%;
+  /* height: 200px; */
+  background-color: #ccc;
+  border-radius: 4px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 1px;
 }
 
-.App-link {
-  color: #61dafb;
+.boxV1 {
+  margin-top: 80px;
+  order: 1;
+  height: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.boxV2 {
+  order: 2;
+  height: 600px;
+}
+
+.boxV3 {
+  order: 3;
+  height: 80px;
+}
+.containerH {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  /* padding-top: 0%; */
+}
+
+.boxH {
+  width: 150px;
+  /* height: 180px; */
+  background-color: #8eddf5;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 0%; */
+}
+
+.boxH1 {
+  order: 1;
+  height: 600px;
+}
+
+.boxH2 {
+  order: 2;
+  height: 600px;
+}
+
+.boxH3 {
+  order: 3;
+  height: 600px;
 }
