--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,57 @@
-.containerV {
+.container {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  /* flex-wrap: wrap; */
+  flex-direction: row;
+  /* flex-direction: column; */
+  height: 710px;
+}
+
+.main1 {
+  width: 400px;
+  /* height: 400px; */
+  border: 1px solid white;
+  padding: 14px;
+  background-color: grey;
+  flex-direction: row;
+  display: flex;
+}
+.main2 {
+  width: 1100px;
+  /* height: 400px; */
+  border: 1px solid white;
+  padding: 14px;
+  background-color: grey;
   flex-direction: column;
-  /* default is row */
-}
-
-.boxV {
-  width: 90%;
-  /* height: 200px; */
-  background-color: #ccc;
-  border-radius: 4px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 1px;
 }
-
-.boxV1 {
-  margin-top: 80px;
-  order: 1;
-  height: 80px;
-}
-
-.boxV2 {
-  order: 2;
-  height: 600px;
-}
-
-.boxV3 {
-  order: 3;
-  height: 80px;
-}
-.containerH {
+.top {
+  background-color: blue;
+  height: 350px;
+  flex-direction: row;
   display: flex;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  /* padding-top: 0%; */
+  border: 1px solid white;
 }
+.bottom {
+  background-color: blueviolet;
+  height: 350px;
+  margin-top: 10px;
 
-.boxH {
-  width: 150px;
-  /* height: 180px; */
-  background-color: #8eddf5;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* padding-top: 0%; */
+  border: 1px solid white;
 }
-
-.boxH1 {
-  order: 1;
-  height: 600px;
+.left {
+  background-color: black;
+  border: 1px solid white;
+  height: 380px;
+  width: 380px;
 }
-
-.boxH2 {
-  order: 2;
-  height: 600px;
+.box1 {
+  background-color: chocolate;
+  height: 340px;
+  width: 100px;
+  border: 1px solid white;
 }
-
-.boxH3 {
-  order: 3;
-  height: 600px;
+.box2 {
+  background-color: seagreen;
+  height: 340px;
+  width: 100px;
+  border: 1px solid white;
 }
